# ska_ost_sim_low_station_beam

./: .coverage  .gitlab-ci.yml  CHANGELOG.rst  CODEOWNERS  Dockerfile  Makefile  README.md  pyproject.toml
docker/: Dockerfile
docs/: examples.ipynb
src/ska_ost_sim_low_station_beam/: LowStation.py  LowStationBeam.py
src/ska_ost_sim_low_station_beam/lfaa_coords/: S10-1_as_built_coordinates.csv  S10-1_coordinates.csv  S10-2_as_built_coordinates.csv  S10-2_coordinates.csv  S10-3_as_built_coordinates.csv  S10-3_coordinates.csv  S10-4_as_built_coordinates.csv  S10-4_coordinates.csv  S10-5_as_built_coordinates.csv  S10-5_coordinates.csv  S10-6_as_built_coordinates.csv  S10-6_coordinates.csv  S8-1_as_built_coordinates.csv  S8-1_coordinates.csv  S8-2_as_built_coordinates.csv  S8-2_coordinates.csv  S8-3_as_built_coordinates.csv  S8-3_coordinates.csv  S8-4_as_built_coordinates.csv  S8-4_coordinates.csv  S8-5_as_built_coordinates.csv  S8-5_coordinates.csv  S8-6_as_built_coordinates.csv  S8-6_coordinates.csv  S9-1_as_built_coordinates.csv  S9-1_coordinates.csv  S9-2_as_built_coordinates.csv  S9-2_coordinates.csv  S9-3_as_built_coordinates.csv  S9-3_coordinates.csv  S9-4_as_built_coordinates.csv  S9-4_coordinates.csv  S9-5_as_built_coordinates.csv  S9-5_coordinates.csv  S9-6_as_built_coordinates.csv  S9-6_coordinates.csv
tests/unit/: conftest.py
tests/unit/ska_ost_sim_low_station_beam/: test_LowStation.py
tests/unit/static/: generate_reference_images.py
