[tool.poetry]
name = "ska-ost-sim-low-station-beam"
version = "0.0.1"
description = "SKA Low station beam response simulator"
authors = ["SKAO"]
maintainers = ["Sarrvesh Sridhar", "Maciej Serylak"]
license = "BSD"
readme = "README.md"
repository = "https://gitlab.com/ska-telescope/ost/ska_ost_sim_low_station_beam"
keywords = ["SKA Low station beam response simulator"]

classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[[tool.poetry.source]]
name = "ska-nexus"
url = "https://artefact.skao.int/repository/pypi-internal/simple"

[[tool.poetry.source]]
name = "PyPI-public"
url = 'https://pypi.org/simple'

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
ska_ost_array_config = {git="https://gitlab.com/ska-telescope/ost/ska-ost-array-config", rev="63316313"}
astroplan = "*"
astropy = "~5.1"
importlib-metadata = "*"

[tool.poetry.dev-dependencies]
isort = "*"
black = "*"
flake8 = "*"
pylint = "*"
pylint_junit = "*"
pytest = "*"
pytest-cov = "*"
pytest-pylint = "*"
python-dotenv = "*"
coverage = "*"
setuptools = "*"
ipython = "*"
jupyter = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
